loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:7: error: not found: value nbBuggles
      nbBuggles = nbBuggles + 1
      ^Poucet1:11: error: not found: value nbBuggles
  if(nbBuggles >= 3){
     ^Poucet1:14: error: not found: value nbBuggles
  else if(nbBuggles < 3) {
          ^